# jckpn-website

./: CNAME  about.html  contact.html  index.html  main.js  script.js  scripts.js  style.css  style.css.map  style.scss  styles.css  styles.css.map  styles.scss
.well-known/: atproto-did
css/: background.css  background.css.map  base.css  base.css.map  combined.css  combined.css.map  content.css  content.css.map  home.css  home.css.map  main.css  main.css.map  misc.css  misc.css.map  mobile.css  mobile.css.map  style.css  style.css.map  title.css  title.css.map  utils.css  utils.css.map  variables.css  variables.css.map
fwd/jewellery/: index.html  script.js  style.css  style.css.map  style.scss
fwd/jewellry/: index.html  script.js  style.css  style.scss  (+1 more)
gptyper/: ads.txt  index.html  success.html
js/: background.js  links.js  main.js
lmb-docs/: .buildinfo  .buildinfo.bak  blocks.html  decoding_strategies.html  generate.html  genindex.html  index.html  models.html  objective_functions.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  stop_criteria.html
poems/: index.html
pypi/: index.html
pypi/not-a-real-repo/not-a-real-repo-0.0.1/: pyproject.toml
pypi/not-a-real-repo/not-a-real-repo-0.0.1/not_a_real_repo.egg-info/: PKG-INFO
scss/: background.scss  base.scss  content.scss  home.scss  main.scss  misc.scss  mobile.scss  utils.scss  variables.scss
v1/: CNAME  styles.css
v2/: index.html  script.js  style.css  style.css.map  style.scss
v3/: index.html  style.css  style.css.map  style.scss
wouldyourather/: index.html
(+49 files in other folders)
